# bluetoothZ

./: CMakeLists.txt  Readme.md
3rd/bluez-5.66/: Makefile  auto.sh  config.h  config.status  libtool
3rd/bluez-5.66/attrib/: gatttool
3rd/bluez-5.66/gdbus/: libgdbus-internal.la
3rd/bluez-5.66/lib/: bluez.pc  libbluetooth-internal.la  (+1 more)
3rd/dbus-1.12.20/: Makefile  auto.sh  config.h  config.status  dbus-1-uninstalled.pc  dbus-1.pc  libtool
3rd/expat-2.5.0/: Makefile  config.status  libtool  run.sh
3rd/gettext-0.22.4/: Makefile  config.status
3rd/glib-2.40.0/: Makefile  auto.sh  config.h  config.lt  config.status  gio-2.0.pc  gio-unix-2.0.pc  gio-windows-2.0.pc  glib-gettextize  glib-zip  glib.cache  gthread-2.0.pc  libtool
3rd/libffi-3.4.4/: Makefile  makefile.sed~
3rd/libical-1.0.1/: CMakeLists.txt
3rd/ncurses-6.2/: Makefile  config.status  edit_man.sh  man_alias.sed
3rd/pcre-8.40/: Makefile  config.h  config.status  libpcre.la  libpcre16.pc  libpcre32.pc  libpcrecpp.la  libpcrecpp.pc  libpcreposix.la  libtool  pcre-config  pcre_scanner_unittest  pcre_stringpiece_unittest  pcrecpp_unittest  pcregrep  pcretest
3rd/pkgconfig/: gettext.pc  glib-2.0.pc  libffi.pc  libncurses.pc  libpcre.pc  libpcreposix.pc  libreadline.pc
3rd/readline-7.0/: Makefile  auto.sh  config.h  config.status  readline.pc
3rd/zlib-1.3.1/: Makefile  compress.lo  crc32.lo  deflate.lo  example  example64  examplesh  gzlib.lo  gzread.lo  gzwrite.lo  infback.lo  inffast.lo  inflate.lo  inftrees.lo  minigzip  minigzip64  minigzipsh  trees.lo  uncompr.lo  zlib.pc  zutil.lo
(+1540 files in other folders)
